--- a/src/components/mixins-pages/sign-in/sign-in.scss
+++ b/src/components/mixins-pages/sign-in/sign-in.scss
@@ -3,7 +3,7 @@
 .sign-in {
     min-height: 100%;
     width: 100%;
-    min-width: 16rem;
+    min-width: 20rem;
     display: flex;
     flex-direction: column;
     &__content {
@@ -21,6 +21,9 @@
         justify-content: center;
         background-size: cover;
         width: 100%;
+    }
+    &__container-login {
+      margin: 0.5rem;
     }  
 }
 
